# ELK_Stack_Repo

./: .gitignore  Elastic_Stack_Install_v5.md  README.md  create_virtual_env.sh  dev-requirements.txt  es-reindexing-run.sh  injector.py  jupyter-notebook.sh  pyproject.toml  service-log.sh  service-start.sh  source-es-reindexing-run.sh  test_pytest.sh
Docker/: Dockerfile  docker-build.sh  docker-compose.yml  docker-run.sh
Vagrant/: Vagrant.md  Vagrantfile
config/: log_config.py
devops/: Search_Engine.py  lookup-id.py  scan-es.py
encrypt/: encrypt.py
golang/: es.go  go.mod  go.sum
java-restclient-es-api/: Main.java  pom.xml
jupyter-workflow/: .coverage  coding.ipynb  elk_es_upgrade_index_validation_logic.ipynb  elk_indices_query_verification.ipynb  elk_migration_esv5_esv8_indices.ipynb  es-curator-delete-job.ipynb  es-push-loki.ipynb  es-security.cs  es-ssl-verification.ipynb  es-user-permission.ipynb  es_lookup_aliase_mapping.ipynb  es_lookup_aliase_mapping_api.ipynb  es_mapping_compare.ipynb  es_mapping_compare_api.ipynb  es_search_gurad_shards_performance.ipynb  es_searchguard.ipynb  es_upgrade_index_validation_api.ipynb  es_upgrade_index_validation_logic.ipynb  gradio_es_mapping_service.py  gradio_es_mapping_service.sh  logstash-socket_client.ipynb  logstash-verification.ipynb  multiprocessing.ipynb  prometheus-query.ipynb  pyfiglet_font.ipynb  ssl_certs_expired_date.ipynb
log-management/: README.md
postman/: Elasticsearch API Documentation .postman_collection.json
rest_api/: injector.py  main.py
shell-script/: threshold.sh
tests/: conftest.py  (+1 more)
(+106 files in other folders)
